fixed case study responsive styles on safari

--- a/source/stylesheets/partials/_page-casestudy.scss
+++ b/source/stylesheets/partials/_page-casestudy.scss
@@ -37,7 +37,10 @@ section.csimages-twowide {
 	@include flexbox();
 	@include flex-flow(column nowrap);
 	div {
-		@include flex(1 1 50%);
+		display: block;
+		@include respond-to(medium) {
+			@include flex(1 1 50%);
+		}
 	}
 	@include respond-to(medium) {
 		@include flex-flow(row nowrap);
